final update